--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde_json = { version = "~1.0.118", optional = true }
 tracing = { version = "~0.1.40", optional = true}
 uuid  = {version = "~1.9.1", optional = true, features = ["v7"]}
 itertools = "0.13.0"
+indexmap = "2.6.0"
 
 [features]
 default = ["serde"]
