--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "balatro-rs"
 version = "0.0.1"
 edition = "2021"
 description = "Game engine and move generator for simplified version of balatro"
+license = "MIT"
 repository ="https://github.com/evanofslack/balatro-rs"
 keywords = ["balatro", "game-engine", "move-generator"]
 
