--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ tracing = { version = "~0.1.40", optional = true}
 uuid  = {version = "~1.9.1", optional = true, features = ["v7"]}
 itertools = "0.13.0"
 indexmap = "2.6.0"
+strum = { version = "0.26", features = ["derive"] }
 
 [features]
 default = ["serde"]
