--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,4 @@
-[package]
-name = "balatro-rs"
-version = "0.0.1"
-edition = "2021"
-description = "Game engine and move generator for simplified version of balatro"
-license = "MIT"
-repository ="https://github.com/evanofslack/balatro-rs"
-keywords = ["balatro", "game-engine", "move-generator"]
+[workspace]
 
-[dependencies]
-rand = "~0.8.5"
-thiserror = "~1.0.61"
-serde = { version = "~1.0.215", optional = true, features = ["derive"] }
-serde_json = { version = "~1.0.118", optional = true }
-tracing = { version = "~0.1.40", optional = true}
-uuid  = {version = "~1.9.1", optional = true, features = ["v7"]}
-itertools = "0.13.0"
-indexmap = "2.6.0"
+members = ["core"]
 
-[features]
-default = ["serde"]
-serde = ["dep:serde", "dep:serde_json", "uuid?/serde"]
