--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -16,7 +16,9 @@ tracing = { version = "~0.1.40", optional = true}
 uuid  = {version = "~1.9.1", optional = true, features = ["v7"]}
 itertools = "0.13.0"
 indexmap = "2.6.0"
+pyo3 = {version = "0.23.1", optional = true}
 
 [features]
-default = ["serde"]
+default = ["serde", "python"]
+python = ["dep:pyo3"]
 serde = ["dep:serde", "dep:serde_json", "uuid?/serde"]
