--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -8,4 +8,5 @@ repository ="https://github.com/evanofslack/balatro-rs"
 
 [dependencies]
 text_io = "0.1.9"
-balatro-rs = {path = "../core/", version = "0.0.1"}
+colored = "2.2.0"
+balatro-rs = {path = "../core/", version = "0.0.1", features = ["colored"]}
