--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -18,6 +18,7 @@ itertools = "0.13.0"
 indexmap = "2.6.0"
 strum = { version = "0.26", features = ["derive"] }
 pyo3 = {version = "0.23.1", optional = true}
+colored = {version = "2.2.0", optional = true}
 
 [dev-dependencies]
 criterion = "0.3"
@@ -26,6 +27,7 @@ criterion = "0.3"
 default = ["serde", "python"]
 python = ["dep:pyo3"]
 serde = ["dep:serde", "dep:serde_json", "uuid?/serde"]
+colored = ["dep:colored"]
 
 [[bench]]
 name = "benchmark"
